# organizer

./: .gitignore  README.md  organizer.py  planner.py  pyproject.toml  ui.py
src/organizer/: __init__.py  __main__.py  notifications.py  planner.py  ui.py  watcher.py
