[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organizer"
version = "0.1.0"
description = "Windows downloads organizer (watcher + UI)"
requires-python = ">=3.12"
dependencies = [
  "watchdog",
  "loguru",
  "ttkbootstrap",
  "win11toast",
  "pystray",
  "Pillow",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
